--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -68,7 +68,7 @@ li {
 
 .building-dropdown {
     position: relative;
-    left: 110px;
+    left: 8%;
 }
 
 .dropdown-select {
